feat - CSRF 방지 cors 체크 추가

--- a/envs/.env.example
+++ b/envs/.env.example
@@ -93,6 +93,9 @@ JWT_REFRESH_EXPIRES_IN=7d     # Refresh Token: 7일
 # JWT 쿠키 설정
 JWT_SESSION_COOKIE_PATH=/
 JWT_REFRESH_MAX_AGE=604800000    # 7일 (밀리초)
+# 쿠키 도메인 설정 (서브도메인 공유용)
+JWT_COOKIE_DOMAIN=.krgeobuk.com  # 프로덕션: .yourdomain.com (점으로 시작)
+JWT_COOKIE_DOMAIN_DEV=           # 개발환경: 빈값 (localhost 사용)
 
 # Redis 저장소 키 접두사
 JWT_REFRESH_STORE_NAME=refreshToken
