--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
   },
   "dependencies": {
     "@krgeobuk/auth": "^1.0.0",
+    "@krgeobuk/authorization": "^1.0.0",
     "@krgeobuk/core": "^1.0.0",
     "@krgeobuk/database-config": "^1.0.0",
     "@krgeobuk/jwt": "^1.0.0",
+    "@krgeobuk/oauth": "^1.0.0",
+    "@krgeobuk/service": "^1.0.0",
     "@krgeobuk/shared": "^1.0.0",
     "@krgeobuk/swagger": "^1.0.0",
-    "@krgeobuk/oauth": "^1.0.0",
     "@krgeobuk/user": "^1.0.0",
-    "@krgeobuk/service": "^1.0.0",
-    "@krgeobuk/authorization": "^1.0.0",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
@@ -48,6 +48,7 @@
     "@nestjs/microservices": "^10.4.19",
     "@nestjs/platform-express": "^10.4.8",
     "@nestjs/swagger": "^7.3.1",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^10.0.2",
     "axios": "^1.7.2",
     "class-transformer": "^0.5.1",
